feat: write auth/refresh endpoint, add its in doc api, correct migration
