# doc/api.yaml
@@ -194,6 +194,36 @@ paths:
           description: Bad request
         409:
           description: Conflict. Login already exists
+  /auth/refresh:
+    post:
+      tags:
+        - Refresh
+      security: [ ]
+      summary: Refresh
+      description: Refresh a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                refreshToken:
+                  type: string
+                  minLength: 3
+                  maxLength: 1255
+                  description: RefreshToken
+              # required:
+              #   - login
+              #   - password
+      responses:
+        200:
+          description: Successful signup
+        401:
+          description: User is not authorized
+        403:
+          description: Forbidden
   /user:
     get:
       tags:
